<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">hangman</string>
    <string name="clue_lbl">Word: %s</string>
    <string name="tries_lbl">Remaining tries: %d</string>
    <string name="try_lbl">Try a letter:</string>
    <string name="won_lbl">You are a WINRAR</string>
    <string name="lost_lbl">You have lost :(</string>
    <string name="new_game">New Game</string>
    <string name="ip_lbl">IP Address:</string>
    <string name="port_lbl">Port:</string>
    <string name="connect">Connect</string>
    <string name="connect_failed">Failed to connect :(</string>
</resources>
