<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <TextView
      android:id="@+id/clue"
      android:text="@string/clue_lbl"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      />

  <TextView
      android:id="@+id/tries_left"
      android:text="@string/tries_lbl"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/clue"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      />

  <ImageView
      android:id="@+id/image"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:src="@drawable/hangman"
      app:layout_constraintTop_toBottomOf="@+id/tries_left"
      app:layout_constraintBottom_toTopOf="@+id/try_lbl"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      />

  <TextView
      android:id="@+id/try_lbl"
      android:text="@string/try_lbl"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toLeftOf="@+id/try_input"
      app:layout_constraintTop_toBottomOf="@+id/image"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      />

  <EditText
      android:id="@+id/try_input"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintLeft_toRightOf="@+id/try_lbl"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintBaseline_toBaselineOf="@+id/try_lbl"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      />

</android.support.constraint.ConstraintLayout>
