<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <android.support.constraint.Barrier
      android:id="@+id/lbl_barrier"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:barrierDirection="right"
      app:constraint_referenced_ids="ip_lbl,port_lbl"
      />

  <TextView
      android:id="@+id/ip_lbl"
      android:text="@string/ip_lbl"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      />
  
  <TextView
      android:id="@+id/port_lbl"
      android:text="@string/port_lbl"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/ip_lbl"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      />

  <EditText
      android:id="@+id/ip_input"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintLeft_toRightOf="@+id/lbl_barrier"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintBaseline_toBaselineOf="@+id/ip_lbl"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      />
  
  <EditText
      android:id="@+id/port_input"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:inputType="number"
      app:layout_constraintLeft_toRightOf="@+id/lbl_barrier"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintBaseline_toBaselineOf="@+id/port_lbl"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      />

  <Button
      android:id="@+id/connect_btn"
      android:text="@string/connect"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/port_lbl"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      />

  <ProgressBar
      android:id="@+id/connect_progress"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="gone"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/connect_btn"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      />
</android.support.constraint.ConstraintLayout>
